Fixed misaligned Title in Header

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 }
 
 #titel{
+    text-align: center;
 }
 
 #main{
